Fix database close calls